<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creditsBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/creditsBackground"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@color/creditsColorControlNormal"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="@dimen/max_width_base"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fitsSystemWindows="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto_insegna_credits" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/backdrop"
                    android:layout_alignBottom="@+id/backdrop">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/credits_gradient_height"
                        android:background="@drawable/toolbar_with_shadow"
                        android:fitsSystemWindows="true" />

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="@dimen/max_width_base"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/backdrop"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:background="@color/top_toolbar"
                    android:id="@+id/container_header">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginRight="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginTop="@dimen/default_very_large_margin_or_padding"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginEnd="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginRight="@dimen/default_very_large_margin_or_padding"
                        android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                        android:text="@string/developed_by"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="@dimen/max_width_base"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="discover"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/discover_mrapps"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="development"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_stay_current_portrait_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/app_development"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="realization"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_personal_video_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/websites_realization"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="design"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_shopping_cart_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/ecommerce_design"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="apps"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_apps_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/our_apps"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="contacts"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_email_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/contact_us"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="requestQuote"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_very_large_margin_or_padding">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:tint="?colorAccent"
                            app:srcCompat="@drawable/ic_description_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/default_very_large_margin_or_padding"
                            android:layout_marginStart="@dimen/default_very_large_margin_or_padding"
                            android:gravity="center_vertical"
                            android:text="@string/request_quote"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/creditsItemsTextColor" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>